--- a/2.2/Makefile
+++ b/2.2/Makefile
@@ -3,7 +3,7 @@ OBJ=./obj
 BIN=./bin
 CXX=g++
 C_FLAG=-std=c++11 -I./src -Wall
-LINK_FLAGS= 
+LINK_FLAGS=
 EXE_SUFFIX=.exe
 
 OBJECTS=$(patsubst ${SRC}/%.cpp, ${OBJ}/%.o,$(wildcard ${SRC}/*.cpp))
@@ -21,21 +21,24 @@ ${TARGET}: ${OBJECTS}
 	${CXX} $^ -o $@ ${LINK_FLAGS}
 	@echo "build $@ successfully"
 
-sinclude ${OBJECTS:.o=.d} 
+sinclude ${OBJECTS:.o=.d}
 
-$(OBJ)/%.o:${SRC}/%.cpp 
+$(OBJ)/%.o:${SRC}/%.cpp
 	$(CXX) $(C_FLAG) -o $@ -c $<
 
-$(OBJ)/%.d:${SRC}/%.cpp 
+$(OBJ)/%.d:${SRC}/%.cpp
 	@if [ ! -d ${OBJ} ]; then mkdir -p ${OBJ}; fi;
 	@echo "Making $@ ..."
-	@${CXX}  $< ${C_FLAG} -MM -MT"$(OBJ)/$*.o" -MT"$@" -MF"$@" 
+	@${CXX}  $< ${C_FLAG} -MM -MT"$(OBJ)/$*.o" -MT"$@" -MF"$@"
 
-.PRONY:clean cleanall all
+.PRONY:clean cleanall all run
 clean:
 	@echo "Removing binary files......"
 	-rm -rf $(OBJ)/*.o $(BIN)/*.*
 
 cleanall:
 	@echo "Removing all produced files......"
-	-rm -rf $(OBJ) $(BIN) 
+	-rm -rf $(OBJ) $(BIN)
+
+run:all
+	${TARGET}
